Bug 469347 - TM: obj.length and slowArray.length don't trace.  r=gal